# dart_version_manager

./: .coveragerc  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  publish.yml
dart_version_manager/: __main__.py  core.py  main.py
dart_version_manager/commands/: __init__.py  build_command.py  major_command.py  minor_command.py  patch_command.py  pre_release_command.py
docs/: index.md
dvm/: __main__.py  core.py  main.py  utils.py
dvm/commands/: __init__.py  build_command.py  major_command.py  minor_command.py  patch_command.py  pre_release_command.py
search/: search_index.json
tests/: config.py  pubspec.yaml  test_build.py  test_dvm.py  test_major.py  test_minor.py  test_patch.py  test_pre_release.py
